# Automata-MEPhI-4

./: .gitignore  README.md
lab1/: 1.txt  Makefile  gen.py  lab1.rar  Сводка.xlsx
lab1/cpp/: regex.cpp
lab1/flex/: scan.l
lab2/: CMakeLists.txt  main.cpp  tests.cpp  tree.cpp  tree.h
lab2/lib/: graph.cpp  graph.h  tree.cpp  tree.h
lab2/lib/dfa/: dfa.cpp  dfa.h
lab2/lib/nfa/: nfa.cpp  nfa.h
lab2/lib/tree/: tree.cpp  tree.h
lab3/: Makefile  code.txt  function.cpp  function.h  maze.txt  node.c  node.cpp  operand.cpp  operand.h  operation.cpp  prog.l  prog.y  prog.yy  rob_test.txt  robot.cpp  robot.h  scanner.h  table.h  type.h  variable.cpp
lab3 cpp/: operand.h  prog.l  prog.y
